// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbMenu renders correctly with custom className 1`] = `
<li
  className="custom-class"
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Menu"
    className="wrapper sizeXxs"
    data-testid="menu-button"
    data-vibe="MenuButton"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="16"
      role="img"
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
        fill="currentColor"
      />
    </svg>
  </button>
</li>
`;

exports[`BreadcrumbMenu renders correctly with empty props 1`] = `
<li
  className="breadcrumbMenuWrapper"
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Menu"
    className="wrapper sizeXxs"
    data-testid="menu-button"
    data-vibe="MenuButton"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="16"
      role="img"
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
        fill="currentColor"
      />
    </svg>
  </button>
</li>
`;

exports[`BreadcrumbMenu renders correctly with various MenuItem props 1`] = `
<li
  className="breadcrumbMenuWrapper"
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Menu"
    className="wrapper sizeXxs"
    data-testid="menu-button"
    data-vibe="MenuButton"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="16"
      role="img"
      viewBox="0 0 20 20"
      width="16"
    >
      <path
        d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
        fill="currentColor"
      />
    </svg>
  </button>
</li>
`;
